--- a/src/App.css
+++ b/src/App.css
@@ -1,115 +1,172 @@
-header {
+.numbers-row {
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 8rem;
-  padding: 4rem var(--inline-padding);
-  padding-right: 0;
-  overflow: hidden;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  gap: 40px;
+  justify-content: space-evenly;
+  margin-top: 3.5rem;
 }
-.cost-report {
-  display: inline-flex;
-  margin-bottom: -0.5rem;
+.numbers-row li {
+  display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: fit-content;
-  padding: 8px 12px;
-  text-decoration: none;
-  font-size: 13px;
-  text-transform: uppercase;
+  column-gap: 1rem;
+}
+.numbers-row .content {
+  font-size: 4rem;
+  font-weight: 500;
+  font-family: var(--heading-font);
+  color: var(--dark-text);
+}
+.numbers-row .desc {
+  font-size: 1.5rem;
+  font-weight: 500;
   color: var(--primary-text);
-  border: 1px solid rgb(65, 188, 196);
-  border-radius: 32px;
-  background-color: rgb(237, 255, 255);
-  font-family: "Work Sans", sans-serif;
+  font-family: var(--body-font);
 }
-.cost-report span {
-  margin-left: 8px;
-  margin-bottom: -3px;
+.content-with-img {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.flex-container {
+  display: grid;
+  gap: 5rem;
+  margin-block: 8rem;
+  grid-template-columns: 1fr 1fr;
+}
+.expert-container {
+  display: flex;
+  gap: 2rem;
+  margin-top: 5rem;
+}
+.expert-content {
+  display: grid;
+  gap: 2rem;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+.expert-item {
   transition: transform 0.2s ease-in-out;
+  list-style-type: none;
 }
-.cost-report:hover span {
-  transform: translateX(3px);
+.expert-item:hover {
+  transform: translateY(-10px);
 }
-header section {
+.expert-item img {
+  border-radius: 12px;
+}
+.expert-item p {
+  color: var(--primary-dark-text);
+  font-weight: 700;
+  font-size: 1.5rem;
+  font-family: var(--heading-font);
+}
+.expert-item span {
+  color: #71879c;
+  font-weight: 700;
+  font-size: 1.25rem;
+  font-family: var(--body-font);
+}
+.blog-container {
+  display: grid;
+  grid-template-columns: 1fr 1px 1fr;
+}
+.blog-content {
   display: flex;
   flex-direction: column;
   gap: 1.5rem;
-  padding-left: var(--inline-padding);
 }
-.header-cta {
+.blog-content li {
+  list-style-type: none;
+}
+.blog-content a {
+  text-decoration: none;
+  transition: transform 0.2s ease-in-out;
+}
+.blog-content a:hover {
+  background: rgb(248 249 249);
+  transform: scale(1.03);
+}
+.divider {
+  height: 100%;
+  width: 1px;
+  background: #71879c33;
+}
+.blog-item {
   display: flex;
+  gap: 1rem;
   align-items: center;
+}
+.blog-text {
+  display: flex;
+  flex-direction: column;
+}
+.blog-title {
+  font-family: var(--heading-font);
+  color: #222222;
+  font-size: 0.9375rem;
+}
+.blog-desc {
+  color: #71879c;
+  font-size: 1.125rem;
+}
+.community-container {
+  background: var(--primary-text) url(../../public/assets/community-bg.webp)
+    bottom right no-repeat;
+  min-width: calc(100vw - 8rem);
+  border-radius: 24px;
+  margin: 8rem auto;
+  box-shadow: 0px 25px 30px 0px #41bcc466;
+  padding: 2rem;
+  display: flex;
+  flex-direction: column;
   gap: 1.5rem;
 }
-.cta-btn {
-  display: flex;
+.community-title {
+  font-family: var(--heading-font);
+  color: #ffffff;
+  font-size: 2.25rem;
+}
+.community-desc {
+  font-family: var(--body-font);
+  color: #ffffff;
+  font-size: 1.125rem;
+  line-height: 26.64px;
+  max-width: 30rem;
+}
+.download-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
   align-items: center;
-  gap: 0.3rem;
+  gap: 3rem;
+  border-radius: 24px;
+  background: rgba(113, 135, 156, 0.05);
+  overflow: hidden;
 }
-.btn-delimiter {
-  color: #94a1ad;
+.download-text-container {
+  display: flex;
+  flex-direction: column;
+  padding: 2rem;
 }
-.partners {
-  margin-top: 5.5rem;
-  border: 1px solid #71879c33;
-  border-radius: 8px;
-  padding: 20px;
-  padding-bottom: 10px;
+.download-copy {
+  font-family: var(--body-font);
+  color: #71879c;
+  font-size: 1.125rem;
 }
-.partners p {
-  font-family: "Hanken Grotesk", sans-serif;
-  margin-bottom: 1rem;
+.download-title {
+  font-family: var(--heading-font);
+  color: var(--dark-text);
+  font-size: 2.5rem;
+  font-weight: 700;
+  margin-block: 0.8rem 4rem;
 }
-.img-container {
+.download-img-container {
   position: relative;
-  margin-right: -2rem;
+  padding-right: 2rem;
+  padding-bottom: 0;
 }
-.img-container img {
-  max-width: 100%;
-  object-fit: cover;
-}
-.top-ball {
+.download-img-container .ball {
   position: absolute;
-  z-index: -1;
-  left: -50px;
-  width: 200px;
-  height: 200px;
-  animation: bounce 5s linear infinite;
-}
-.rolling-ball-container {
-  position: absolute;
-  width: 380px;
-  height: 380px;
-  z-index: -1;
-  left: 0;
-  bottom: 0;
-  animation: rollAlongBottomLeft 5s linear infinite;
-  transform-origin: center center;
-}
-.rolling-ball {
-  width: 100%;
-  object-fit: cover;
-}
-@keyframes bounce {
-  0% {
-    transform: translateY(0);
-  }
-  50% {
-    transform: translateY(-50px);
-  }
-  100% {
-    transform: translateY(0);
-  }
-}
-
-@keyframes rollAlongBottomLeft {
-  0% {
-    transform: translateX(0) rotate(360deg);
-  }
-  50% {
-    transform: translateX(30px) rotate(270deg);
-  }
-  100% {
-    transform: translateX(0) rotate(360deg);
-  }
+  bottom: -22%;
+  right: -10%;
 }
