--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -1,120 +1,191 @@
 footer {
-  background-color: #027D7D;
+  background-color: var(--primary-text);
   color: white;
-  padding: 2rem;
+  padding: 12rem var(--inline-padding);
+  padding-bottom: 17rem;
   font-family: Arial, sans-serif;
+  margin-top: 15rem;
+  background-image: url(../../public/assets/cut-logo.png);
+  background-repeat: no-repeat;
+  background-position: bottom;
+  position: relative;
 }
-
 .newsletter {
-  background-color: #029F9F;
-  padding: 1.5rem;
-  border-radius: 10px;
-  text-align: center;
-  margin-bottom: 2rem;
+  background-color: #41bcc4;
+  padding: 16px 24px;
+  border-radius: 12px;
+  position: absolute;
+  min-width: calc(100vw - 8rem);
+  top: -10%;
+  left: 50%;
+  transform: translateX(-50%);
+  display: grid;
+  grid-template-columns: 3fr 2fr;
 }
-
-.newsletter h3 {
-  margin-bottom: 0.5rem;
+.newsletter-title {
+  color: white;
   font-size: 1.5rem;
+  font-family: var(--heading-font);
+  font-weight: 700;
+  margin-bottom: 0.5rem;
 }
 
-.newsletter p {
+.newsletter-desc {
+  font-family: var(--body-font);
+  color: white;
+  font-size: 1.25rem;
+  font-weight: 700;
+}
+.newsletter-form-name {
+  display: flex;
+  gap: 1rem;
   margin-bottom: 1rem;
+}
+.newsletter-form input {
+  padding: 1rem 0.8rem;
+  border: none;
+  border-radius: 50px;
+  background: #0898a0;
+  color: white;
+  font-family: "Inter", sans-serif;
+  font-weight: 600;
   font-size: 1rem;
 }
-
-.newsletter-form input {
-  padding: 0.8rem;
-  margin: 0.5rem;
-  border: none;
-  border-radius: 5px;
+.newsletter-form input::placeholder {
+  color: white;
 }
-
+.newsletter-form input:focus {
+  outline: none;
+  border: 1px solid white;
+}
+.newsletter-first-name {
+  border-bottom-right-radius: 0% !important;
+  border-top-right-radius: 0% !important;
+}
+.newsletter-last-name {
+  border-bottom-left-radius: 0% !important;
+  border-top-left-radius: 0% !important;
+}
+.form-submission {
+  position: relative;
+}
+.newsletter-email {
+  width: 100%;
+}
 .newsletter-form button {
   background-color: #fff;
   border: none;
-  padding: 0.8rem 1.5rem;
-  border-radius: 5px;
+  padding: 0.8rem 1.2rem;
+  border-radius: 30px;
   cursor: pointer;
   font-size: 1rem;
+  position: absolute;
+  right: 1%;
+  top: 50%;
+  transform: translateY(-50%);
 }
-
+.newsletter-form button svg {
+  transition: transform 0.2s ease-in-out;
+}
+.newsletter-form button:hover svg {
+  transform: translateX(5px);
+}
 .footer-content {
-  display: flex;
-  justify-content: space-between;
-  padding: 2rem 0;
-}
-
-.company-info h2 {
-  font-size: 1.8rem;
-}
-
-.footer-links {
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
   gap: 2rem;
 }
-
-.footer-links div {
+.company-info {
+  display: flex;
   flex-direction: column;
+  gap: 1rem;
 }
-
-.footer-links h4 {
-  margin-bottom: 1rem;
-  font-size: 1.2rem;
+.company-info p {
+  font-family: var(--body-font);
+  font-size: 12px;
+  color: white;
 }
-
+.footer-links {
+  font-family: var(--heading-font);
+  font-size: 14px;
+  display: flex;
+  flex-direction: column;
+  gap: 0.6rem;
+}
 .footer-links ul {
   list-style: none;
   padding: 0;
 }
-
+.footer-links span {
+  font-weight: 600;
+  font-size: 1rem;
+}
 .footer-links li {
   margin-bottom: 0.5rem;
 }
-
 .footer-links a {
   color: white;
   text-decoration: none;
+  transition: transform 0.1s ease-in-out;
+  display: inline-block;
+}
+.footer-links a:hover {
+  transform: scale(1.05);
+}
+.footer-cta {
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+}
+.footer-cta button {
+  color: white;
+  padding: 0.7rem 1.5rem !important;
+  font-size: 14px;
+}
+.footer-cta .download-btn {
+  background-color: #41bcc4;
+  border-radius: 50px;
+  padding-inline: 1rem !important;
+  min-width: max-content !important;
+}
+.download-btn span {
+  color: #9fdce1;
 }
 
 .footer-bottom {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  color: #9fdce1;
+  font-size: 14px;
   margin-top: 2rem;
 }
-
-.download-btn, .invest-btn {
-  padding: 0.8rem 1.5rem;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  font-size: 1rem;
-  margin-right: 1rem;
+.copy-right {
+  font-family: var(--heading-font);
+}
+.footer-bottom ul {
+  display: flex;
+  font-family: var(--body-font);
+  gap: 2rem;
+  align-items: center;
+  font-weight: 500;
+}
+.footer-bottom ul li {
+  list-style: none;
+}
+.footer-bottom ul li a {
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  color: #9fdce1;
+  transition: transform 0.1s ease-in-out;
+}
+.footer-bottom ul li a:hover {
+  transform: scale(1.05);
 }
 
 .download-btn {
   background-color: white;
-  color: #027D7D;
-}
-
-.invest-btn {
-  background-color: #FFCA28;
-  color: #000;
-}
-
-.social-links a {
-  margin-right: 1rem;
-  color: white;
-  text-decoration: none;
-}
-
-@media (max-width: 768px) {
-  .footer-content, .footer-bottom {
-    flex-direction: column;
-    text-align: center;
-  }
-  .footer-links {
-    flex-direction: column;
-  }
+  color: #027d7d;
 }
