--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -29,7 +29,6 @@ footer {
   font-weight: 700;
   margin-bottom: 0.5rem;
 }
-
 .newsletter-desc {
   font-family: var(--body-font);
   color: white;
@@ -151,7 +150,6 @@ footer {
 .download-btn span {
   color: #9fdce1;
 }
-
 .footer-bottom {
   display: flex;
   justify-content: space-between;
@@ -184,8 +182,11 @@ footer {
 .footer-bottom ul li a:hover {
   transform: scale(1.05);
 }
-
 .download-btn {
   background-color: white;
   color: #027d7d;
+  transition: transform 0.2s ease-in-out;
+}
+.download-btn:hover {
+  transform: scale(1.02);
 }
