--- a/src/components/meetRisers.css
+++ b/src/components/meetRisers.css
@@ -1,14 +1,13 @@
 .meet-risers {
   margin-block: 5rem;
+  position: relative;
 }
-
 .risers-container {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
   gap: 24px;
   margin-top: 20px;
 }
-
 .riser-card {
   position: relative;
   border-radius: 12px;
@@ -16,9 +15,6 @@
   height: 19rem;
   background-size: cover;
   background-position: center;
-}
-.riser-sanni {
-  background-image: url(../../public/assets/riser-sanni.jpg);
 }
 .play-button {
   width: 100%;
@@ -40,7 +36,6 @@
   justify-content: center;
   align-items: center;
 }
-
 .riser-name {
   position: absolute;
   bottom: 20px;
@@ -49,47 +44,33 @@
   font-weight: bold;
   font-size: 1.5rem;
 }
-
-.floating-decorations {
+.modal-content {
+  background-color: rgb(0, 0, 0);
+  width: 70%;
+  margin-inline: auto;
+  padding: 2rem;
+  border-radius: 20px;
+  position: relative;
+}
+.close-modal-button {
+  border-radius: 100%;
+  width: 2rem;
+  height: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0 !important;
   position: absolute;
-  top: 10px;
-  right: 10px;
+  top: 10;
+  right: 3%;
+  color: white;
+  background-color: rgba(0, 0, 0, 0.54);
+  border: 1px solid white;
 }
-
-.circle {
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-  position: absolute;
-}
-
-.teal {
-  background-color: #00838f;
-  left: -30px;
-  top: 50px;
-}
-
-.pink {
-  background-color: #e91e63;
-  right: -20px;
-  top: 20px;
-}
-
-.purple {
-  background-color: #673ab7;
-  bottom: -20px;
-  right: 50px;
-}
-.modal {
-  display: none;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
-  z-index: 1000;
-}
-.modal-visible {
+.play-video {
+  max-width: 90%;
+  border-radius: 20px;
   display: block;
+  margin-inline: auto;
+  z-index: 2;
 }
