--- a/src/components/nav.css
+++ b/src/components/nav.css
@@ -2,57 +2,55 @@ nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 1rem 2rem;
-  background-color: white;
-  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
+  padding: 2rem var(--inline-padding);
+  font-family: var(--heading-font);
+  font-weight: 500;
 }
-
-.nav-logo {
-  font-size: 1.5rem;
-  font-weight: bold;
-  color: #027D7D;
+.nav-link-container {
+  display: flex;
+  align-items: center;
+  gap: 5rem;
+  font-size: 0.875rem;
 }
-
 .nav-links {
   display: flex;
   align-items: center;
   gap: 1.5rem;
 }
-
+.nav-links li {
+  list-style-type: none;
+}
 .nav-links a {
   text-decoration: none;
-  color: #333;
-  font-size: 1rem;
+  color: var(--dark-text);
   transition: color 0.3s ease;
 }
-
 .nav-links a:hover {
-  color: #027D7D;
+  color: var(--primary-text);
 }
-
 .auth-buttons {
   display: flex;
   align-items: center;
   gap: 1rem;
+  font-weight: 500;
 }
-
+.auth-buttons button {
+  border-radius: 50px;
+}
 .login-btn {
-  background-color: #F3F3F3;
-  padding: 0.5rem 1.2rem;
-  border: none;
-  border-radius: 20px;
-  font-size: 1rem;
-  cursor: pointer;
+  background-color: #71879c0d;
+  padding: 0.8rem 1.8rem;
+  color: var(--dark-text);
+  transition: transform 0.2s ease-in-out;
 }
-
+.login-btn:hover {
+  transform: scale(1.02);
+}
 .get-started-btn {
-  background-color: #027D7D;
-  color: white;
-  padding: 0.5rem 1.2rem;
-  border: none;
-  border-radius: 20px;
-  font-size: 1rem;
-  cursor: pointer;
+  transition: transform 0.2s ease-in-out;
+}
+.get-started-btn:hover {
+  transform: scale(1.02);
 }
 
 .hamburger {
@@ -80,13 +78,15 @@ nav {
   color: #333;
 }
 
-.mobile-menu .login-btn, .mobile-menu .get-started-btn {
+.mobile-menu .login-btn,
+.mobile-menu .get-started-btn {
   width: 80%;
   text-align: center;
 }
 
 @media (max-width: 768px) {
-  .nav-links, .auth-buttons {
+  .nav-links,
+  .auth-buttons {
     display: none;
   }
   .hamburger {
