--- a/src/index.css
+++ b/src/index.css
@@ -30,7 +30,8 @@ h1 {
   font-size: 3.75rem;
   line-height: 4.6875rem;
 }
-h2,h3 {
+h2,
+h3 {
   font-size: 3rem;
   line-height: 3.7rem;
 }
@@ -57,7 +58,7 @@ button {
 button:hover span {
   transform: translateX(5px);
 }
-.container{
+.container {
   padding-inline: var(--inline-padding);
 }
 .heading-span {
@@ -91,6 +92,10 @@ button:hover span {
   color: var(--primary-dark-text);
   background-color: #71879c0d;
   border: none;
+  transition: transform 0.2s ease-in-out;
+}
+.btn-secondary:hover {
+  transform: scale(1.05);
 }
 .btn-light {
   color: var(--primary-text);
@@ -101,9 +106,9 @@ button:hover span {
   margin-bottom: -5px;
   transition: transform 0.2s ease-in-out;
 }
-.btn-outline{
+.btn-outline {
   color: #fff;
-  border: 1px solid #FFF;
+  border: 1px solid #fff;
   background: none;
 }
 .btn-outline span {
@@ -113,44 +118,23 @@ button:hover span {
   transition: transform 0.2s ease-in-out;
 }
 .modal {
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
+  position: fixed;
+  z-index: 1;
   left: 0;
   top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed inside modal itself, but not the body */
-  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
-  display: none; /* Initially hidden */
+  width: 100%;
+  height: 100%;
+  display: none;
+  background-color: rgba(255, 255, 255, 0.3);
+  backdrop-filter: blur(5px);
+  justify-content: center;
+  align-items: center;
 }
-
-.modal.visible {
-  display: block; /* Make modal visible when 'visible' class is added */
-}
-
-.modal-content {
-  background-color: #fefefe;
-  margin: 15% auto; /* 15% from the top and centered */
-  padding: 20px;
-  border: 1px solid #888;
-  width: 80%; /* Could be more or less, depending on screen size */
-}
-
-.close-button {
-  color: #aaa;
-  float: right;
-  font-size: 28px;
-  font-weight: bold;
-}
-
-.close-button:hover,
-.close-button:focus {
-  color: black;
-  text-decoration: none;
-  cursor: pointer;
+.modal-visible {
+  display: flex;
 }
 .no-scroll {
   overflow: hidden;
-  position: fixed;
-  width: 100%;
+  /* position: fixed; */
+  /* width: 100%; */
 }
