--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -10,6 +10,14 @@ footer {
   background-position: bottom;
   position: relative;
 }
+@media (max-width: 768px) {
+  footer {
+    padding-bottom: 15rem;
+    margin-top: 25rem;
+    background-size: contain;
+    padding-inline: var(--padding-sm);
+  }
+}
 .newsletter {
   background-color: #41bcc4;
   padding: 16px 24px;
@@ -21,6 +29,17 @@ footer {
   transform: translateX(-50%);
   display: grid;
   grid-template-columns: 3fr 2fr;
+}
+@media (max-width: 768px) {
+  .newsletter {
+    grid-template-columns: 1fr;
+    gap: 2rem;
+    padding: 1rem;
+    left: 50%;
+    transform: translateX(-50%);
+    top: -20%;
+    min-width: calc(100vw - 15rem);
+  }
 }
 .newsletter-title {
   color: white;
@@ -39,6 +58,12 @@ footer {
   display: flex;
   gap: 1rem;
   margin-bottom: 1rem;
+}
+@media (max-width: 768px) {
+  .newsletter-form-name {
+    flex-direction: column;
+    gap: 1rem;
+  }
 }
 .newsletter-form input {
   padding: 1rem 0.8rem;
@@ -65,6 +90,16 @@ footer {
   border-bottom-left-radius: 0% !important;
   border-top-left-radius: 0% !important;
 }
+@media (max-width: 768px) {
+  .newsletter-first-name {
+    border-bottom-right-radius: 50px !important;
+    border-top-right-radius: 50px !important;
+  }
+  .newsletter-last-name {
+    border-bottom-left-radius: 50px !important;
+    border-top-left-radius: 50px !important;
+  }
+}
 .form-submission {
   position: relative;
 }
@@ -83,6 +118,11 @@ footer {
   top: 50%;
   transform: translateY(-50%);
 }
+@media (max-width: 768px) {
+  .newsletter-form button {
+    right: 2%;
+  }
+}
 .newsletter-form button svg {
   transition: transform 0.2s ease-in-out;
 }
@@ -93,6 +133,37 @@ footer {
   display: grid;
   grid-template-columns: repeat(6, 1fr);
   gap: 2rem;
+}
+@media (max-width: 768px) {
+  .footer-content {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 2rem;
+  }
+  .footer-content > *:nth-child(1) {
+    grid-column: 1 / 3;
+    grid-row: 1;
+  }
+  .footer-content > *:nth-child(2) {
+    grid-column: 1 / 2;
+    grid-row: 3;
+  }
+  .footer-content > *:nth-child(3) {
+    grid-column: 2 / 3;
+    grid-row: 3;
+  }
+  .footer-content > *:nth-child(4) {
+    grid-column: 1 / 2;
+    grid-row: 4;
+  }
+  .footer-content > *:nth-child(5) {
+    grid-column: 2 / 3;
+    grid-row: 4;
+  }
+  .footer-content > *:nth-child(6) {
+    grid-column: 1 / 3;
+    grid-row: 2;
+  }
 }
 .company-info {
   display: flex;
@@ -141,6 +212,12 @@ footer {
   padding: 0.7rem 1.5rem !important;
   font-size: 14px;
 }
+@media (max-width: 768px) {
+  .footer-cta button {
+    width: 100%;
+    padding: 0.9rem 1.5rem !important;
+  }
+}
 .footer-cta .download-btn {
   background-color: #41bcc4;
   border-radius: 50px;
@@ -158,6 +235,13 @@ footer {
   font-size: 14px;
   margin-top: 2rem;
 }
+@media (max-width: 768px) {
+  .footer-bottom {
+    margin-top: 3rem;
+    flex-direction: column-reverse;
+    gap: 1rem;
+  }
+}
 .copy-right {
   font-family: var(--heading-font);
 }
@@ -167,6 +251,12 @@ footer {
   gap: 2rem;
   align-items: center;
   font-weight: 500;
+}
+@media (max-width: 768px) {
+  .footer-bottom ul {
+    gap: 1rem;
+    flex-wrap: wrap;
+  }
 }
 .footer-bottom ul li {
   list-style: none;
