--- a/src/components/nav.css
+++ b/src/components/nav.css
@@ -106,7 +106,7 @@ nav {
     padding-inline: var(--padding-sm);
   }
   .auth-list button {
-    padding: 1rem 3rem;
+    min-width: 10rem;
     border-radius: 50px;
   }
   .nav-links,
